--- a/public/index.html
+++ b/public/index.html
@@ -5,65 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
-    <title>PriscomSales | Sales, POS and Inventory Software in Nigeria</title>
     <meta
       name="description"
-      content="PriscomSales is a modern Sales, POS and inventory management software for small and medium businesses in Nigeria. Track sales, manage stock, control staff access and grow your business with real time insights."
+      content="PriscomSales is a modern Sales,Pos and inventory management software for small and medium businesses in Nigeria."
     />
-    <meta
-      name="keywords"
-      content="POS software Nigeria, inventory software Nigeria, sales management system, stock control software, business POS Lagos, retail software Nigeria, shop management app"
-    />
-
-    <meta property="og:title" content="PriscomSales | Sales and Inventory Software in Nigeria" />
-    <meta property="og:description" content="Smart POS and stock management system for Nigerian SMEs. Track sales, manage products, and control your business easily." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://priscomsales.online/" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <title>PriscomSales | Sales and Inventory Software in Nigeria</title>
   </head>
-
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
-    <!-- SEO fallback content for Google -->
-    <div style="padding: 20px; max-width: 900px; margin: auto;">
-      <h1>Sales and Inventory Software for Nigerian Businesses</h1>
-      <p>
-        PriscomSales is a cloud based Sales, POS and inventory management solution designed for small and medium sized businesses across Nigeria. Monitor sales in real time, prevent stock loss and take full control of your business without stress.
-      </p>
-
-      <h2>Who Can Use PriscomSales</h2>
-      <ul>
-        <li>Retail shops and boutiques</li>
-        <li>Supermarkets and mini marts</li>
-        <li>Pharmacies and cosmetic stores</li>
-        <li>Wholesalers and distributors</li>
-        <li>Electronics, food and beverage stores</li>
-        <li>Everyone as long as you want Control ,Accuracy and Report</li>
-      </ul>
-
-      <h2>Core Features</h2>
-      <ul>
-        <li>POS billing with fast checkout</li>
-        <li>Inventory tracking and automated stock alerts</li>
-        <li>Sales Report and customizable business reports</li>
-        <li>Send Receipt via Mail </li>
-        <li>Customized Receipt with your Business Logo </li>
-        <li>Manage Your Expenses </li>
-        <li>Customer management with purchase history</li>
-        <li>Role based user access control for employees</li>
-        <li>Multi branch support for growing businesses</li>
-        <li>Cloud backup so your data stays safe</li>
-        <li>Subscription plans with free option for small users</li>
-      </ul>
-
-      <h2>Why Businesses Choose PriscomSales</h2>
-      <p>
-        Many Nigerian shops lose money due to manual stock records and unknown sales activities and theft. PriscomSales gives you accurate records that help you reduce losses and increase profits daily.
-      </p>
-    </div>
-
     <div id="root"></div>
   </body>
 </html>
