--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,76 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    
+    <!-- Primary SEO Meta Tags -->
+    <title>PriscomSales | Sales, POS and Inventory Management Software in Nigeria</title>
+    <meta name="title" content="PriscomSales | Sales, POS and Inventory Management Software in Nigeria" />
     <meta
       name="description"
-      content="PriscomSales is a modern Sales,Pos and inventory management software for small and medium businesses in Nigeria."
+      content="PriscomSales is a modern Sales, POS and inventory management software for small and medium businesses in Nigeria. Streamline your operations with our powerful business management tools."
     />
-    <title>PriscomSales | Sales and Inventory Software in Nigeria</title>
+    <meta name="keywords" content="sales software Nigeria, POS system Nigeria, inventory management, business software, SME software, point of sale, stock management, retail software, Nigeria business, priscomsales" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="PriscomSales" />
+    <meta name="geo.region" content="NG" />
+    <meta name="geo.placename" content="Nigeria" />
+    <link rel="canonical" href="https://priscomsales.online/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://priscomsales.online/" />
+    <meta property="og:title" content="PriscomSales | Sales, POS and Inventory Management Software in Nigeria" />
+    <meta property="og:description" content="Modern Sales, POS and inventory management software for small and medium businesses in Nigeria. Streamline your operations with powerful business management tools." />
+    <meta property="og:image" content="https://priscomsales.online/og-image.jpg" />
+    <meta property="og:site_name" content="PriscomSales" />
+    <meta property="og:locale" content="en_NG" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://priscomsales.online/" />
+    <meta name="twitter:title" content="PriscomSales | Sales, POS and Inventory Management Software in Nigeria" />
+    <meta name="twitter:description" content="Modern Sales, POS and inventory management software for Nigerian businesses. Streamline operations efficiently." />
+    <meta name="twitter:image" content="https://yourwebsite.com/twitter-image.jpg" />
+
+    <!-- Structured Data / Schema.org for Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "PriscomSales",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Web",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "100"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "NGN"
+      },
+      "description": "Modern Sales, POS and inventory management software for small and medium businesses in Nigeria.",
+      "applicationSubCategory": "Business Management, POS, Inventory",
+      "targetCountry": "NG"
+    }
+    </script>
+
+    <!-- Local Business Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "PriscomSales",
+      "description": "Sales, POS and inventory management software for Nigerian businesses",
+      "url": "https://priscomsales.online",
+      "areaServed": {
+        "@type": "Country",
+        "name": "Nigeria"
+      }
+    }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
