--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,12 @@
       }
     }
     </script>
+  <!-- Mono Connect Script - Official SDK -->
+    <script src="https://connect.mono.co/connect.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
+
